# etoeragcb

./: .gitignore  README.md  adminworks.md  architecture.md  rag-chatbot-plan.md
backend/: .dockerignore  Dockerfile  logging.json  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_p1_baseline.py  0002_p2_auth_tenancy.py  0003_p3_collaboration.py  0004_p4_staged_ingestion.py  0005_p11_operations.py
backend/app/: __init__.py  admin_cli.py  config.py  main.py  serve.py  workers.py
backend/app/auth/: __init__.py  dependencies.py  rate_limit.py  routes.py  schemas.py  security.py  service.py
backend/app/chat/: __init__.py  citations.py  generator.py  orchestrator.py  prompts.py  routes.py  runtime.py  schemas.py  service.py
backend/app/collections/: __init__.py  routes.py  schemas.py
backend/app/core/: __init__.py  db.py  idempotency.py  logging.py  metrics.py  pagination.py  readiness.py
backend/app/documents/: __init__.py  files.py  queue.py  routes.py  schemas.py
backend/app/evaluation/: __init__.py  calibration.py  cli.py  dataset.py  engine.py  feedback.py  metrics.py  report.py  schemas.py
backend/app/ingest/: __init__.py  chunker.py  embedder.py  hashing.py  indexer.py  jobs.py  normalization.py  parsers.py  reconcile.py  sections.py  smoke.py  storage.py
backend/app/models/: __init__.py  auth.py  base.py  content.py
backend/app/operations/: __init__.py  backup.py  maintenance.py  status.py
backend/app/rag/: __init__.py  cache.py  candidates.py  combined.py  context.py  dedup.py  gate.py  p6_smoke.py  p7_smoke.py  planner.py  postprocess.py  reranker.py  (+5 more)
backend/tests/: conftest.py  test_auth.py  test_config.py  test_operational_endpoints.py  test_p10.py  test_p11.py  test_p3.py  test_p4.py  test_p5.py  test_p6.py  test_p7.py  test_p8.py
streamlit_app/: .dockerignore  Dockerfile  api_client.py  app.py  pyproject.toml  sse.py  state.py
streamlit_app/.streamlit/: config.toml
streamlit_app/tests/: test_api_client.py  test_app.py  test_sse.py
streamlit_app/views/: __init__.py  chat.py  collections.py  common.py  documents.py
(+70 files in other folders)
