[build-system]
requires = ["hatchling==1.27.0"]
build-backend = "hatchling.build"

[project]
name = "rag-chatbot-streamlit"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "httpx==0.28.1",
  "streamlit==1.48.1",
]

[dependency-groups]
dev = [
  "pytest==8.4.1",
  "ruff==0.12.10",
]

[tool.hatch.build.targets.wheel]
packages = ["views"]

[tool.pytest.ini_options]
addopts = "-q --strict-config"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "RUF"]
ignore = ["S101"]
